force-app/main/default/objects/PublicApi_Related_Record_Request__e/PublicApi_Related_Record_Request__e.object-meta.xml
<CustomObject>
    <label>Public API Related Record Request</label>
    <pluralLabel>Public API Related Record Requests</pluralLabel>
    <description>Platform Event for deferred related record resolution in the Public API.</description>
</CustomObject>