force-app/main/default/objects/PublicApi_Related_Record_Request__e/fields/Audit_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Audit_Record_Id__c</fullName>
    <label>Audit Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>