force-app/main/default/objects/PublicApi_Related_Record_Request__e/fields/Related_Record_Configuration_JSON__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Configuration_JSON__c</fullName>
    <label>Related Record Configuration JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>