force-app/main/default/objects/PublicApi_Related_Record_Request__e/fields/Target_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Target_Record_Id__c</fullName>
    <label>Target Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>